--- a/GameServer/GameServer.csproj
+++ b/GameServer/GameServer.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\WebServer\WebServer.csproj" />
     <Reference Include="DanhengKcpSharp">
       <HintPath>..\DanhengKcpSharp\DanhengKcpSharp.dll</HintPath>
     </Reference>
