--- a/WebServer/WebServer.csproj
+++ b/WebServer/WebServer.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="System.Management" Version="8.0.0" />
     <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\GameServer\GameServer.csproj" />
     <Reference Include="DanhengProto">
       <HintPath>..\Proto\DanhengProto.dll</HintPath>
     </Reference>
